# cssg

./: .gitignore  CMakeLists.txt  Makefile  Makefile.nmake  README.md  benchmarks.md  changelog.txt  why-cssg-and-not-x.md
api_test/: CMakeLists.txt  cplusplus.cpp  cplusplus.h  harness.h  main.c
fuzz/: CMakeLists.txt  cssg-fuzz.c
man/: CMakeLists.txt  make_man_page.py
man/man1/: cssg.1
man/man3/: cssg.3
src/: CMakeLists.txt  blocks.c  buffer.c  buffer.h  chunk.h  commonmark.c  cssg.c  cssg.h  cssgConfig.cmake.in  cssg_ctype.c  cssg_ctype.h  cssg_version.h.in  entities.inc  houdini.h  houdini_href_e.c  houdini_html_e.c  houdini_html_u.c  html.c  html.h  inlines.c  inlines.h  iterator.c  iterator.h  latex.c  libcssg.pc.in  main.c  man.c  node.c  node.h  parser.h  references.c  references.h  render.c  render.h  scanners.c  scanners.h  scanners.re  tmp.c  toml.c  utf8.c  (+2 more)
test/: CMakeLists.txt  cssg.py  entity_tests.py  pathological_tests.py  regression.txt  roundtrip_tests.py  spec_tests.py
tools/: make_entities_inc.py  xml2md.xsl
wrappers/: wrapper.php  wrapper.py  wrapper.rb  wrapper.rkt
